# yxa

./: .gitignore  README.md  flake.nix  paper-keycaps.typ
assets/: ebay-listing-info.txt  miryoku_layers.md  rename-keyboard.txt
bak/: .gitignore  README.md  flake.nix
bak/layouts/: miryoku-kbd-layout.vil
bak/overlay/: miryoku_overlay.py  miryoku_trainer.py
bak/qmk/kbd/szr35/: board.h  config.h  rules.mk
bak/qmk/kbd/szr35/keymaps/miryoku/: keymap.c  rules.mk  vial.json
bak/szr35-keyboard/: readme.md
bak/szr35-keyboard/szrkbd/szr35/keymaps/vial/: config.h
bak/trainer/: Cargo.toml  szr35-trainer.desktop
bak/trainer/src/: main.rs
bak/trainer/src/keyboard/: hid.rs  layout.rs
bak/trainer/src/ui/: gui.rs  tui.rs
docs/: keybr-colemak-dh.json
firmware/: keymap.c
firmware/keyboards/yxa/: board.h  config.h  halconf.h  keyboard.json  mcuconf.h  rules.mk
firmware/keyboards/yxa/keymaps/miryoku/: config.h  keymap.c  rules.mk  vial.json  yxa_features.c
firmware/layouts/community/split_3x5_3/miryoku/: config.h  keymap.c
firmware/users/miryoku/: config.h  custom_config.h  custom_rules.mk  miryoku.c  miryoku.h  post_rules.mk  rules.mk
firmware/users/miryoku/miryoku_babel/: miryoku_layer_alternatives.h  miryoku_layer_list.h  miryoku_layer_selection.h
overlay/: hid_test.py  miryoku_overlay.py
qmk/szrkbd/szr35/: keyboard.json
qmk/szrkbd/szr35/ld/: STM32F401xC_plumbl.ld
visual-guide/: Cargo.toml
visual-guide/layouts/: miryoku-kbd-layout.vil
visual-guide/src/keyboard/: hid.rs  layout.rs  mod.rs
visual-guide/src/ui/: gui.rs  mod.rs  tui.rs
yxa/: .gitignore  Cargo.toml  README.md  flake.nix
yxa/.cargo/: config.toml
yxa/crates/firmware/: Cargo.toml  memory.x
yxa/crates/firmware/src/: main.rs
yxa/crates/visual-guide/: Cargo.toml
yxa/crates/visual-guide/src/: main.rs
yxa/crates/visual-guide/src/keyboard/: mod.rs
yxa/crates/visual-guide/src/ui/: gui.rs
