[package]
name = "yxa-firmware"
version = "0.1.0"
edition = "2021"
authors = ["draxel"]
description = "Keyberon firmware for the Yxa 36-Key Split Ergonomic Keyboard"
license = "MIT OR Apache-2.0"

[dependencies]
# Core embedded
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
embedded-hal = "0.2"

# STM32F401 HAL
stm32f4xx-hal = { version = "0.21", features = ["stm32f401", "usb_fs"] }

# Keyboard firmware
keyberon = "0.2"

# USB
usb-device = "0.3"

# RTIC framework
rtic = { version = "2.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0", features = ["cortex-m-systick"] }

# Panic handler
panic-halt = "1.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"

[profile.dev]
opt-level = 1
